src/snapshots/vm__parser__test__parse_post_operators-3.snap
---
source: src/parser.rs
expression: "expr(\"a.b()\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 5,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: FunctionCall {
                calling: Ast {
                    node: AccessMember {
                        source: Ast {
                            node: Ident(
                                u!("a"),
                            ),
                            span: LocatedSpan {
                                offset: 0,
                                line: 1,
                                fragment: "a",
                                extra: (),
                            },
                        },
                        member: u!("b"),
                    },
                    span: LocatedSpan {
                        offset: 1,
                        line: 1,
                        fragment: ".b",
                        extra: (),
                    },
                },
                arguments: [],
            },
            span: LocatedSpan {
                offset: 3,
                line: 1,
                fragment: "()",
                extra: (),
            },
        },
    ),
)
