src/snapshots/vm__parser__test__parse_post_operators-5.snap
---
source: src/parser.rs
expression: "expr(\"a(123)\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 6,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: FunctionCall {
                calling: Ast {
                    node: Ident(
                        u!("a"),
                    ),
                    span: LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "a",
                        extra: (),
                    },
                },
                arguments: [
                    Ast {
                        node: Literal(
                            Int(
                                123,
                            ),
                        ),
                        span: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "123",
                            extra: (),
                        },
                    },
                ],
            },
            span: LocatedSpan {
                offset: 1,
                line: 1,
                fragment: "(123)",
                extra: (),
            },
        },
    ),
)
