src/snapshots/vm__parser__test__parse_return-3.snap
---
source: src/parser.rs
expression: "return_statement(\"return a + b - c\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 16,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Return(
                Some(
                    Ast {
                        node: BinaryOp(
                            Add,
                            Ast {
                                node: Ident(
                                    Ident(
                                        "a",
                                    ),
                                ),
                                span: LocatedSpan {
                                    offset: 7,
                                    line: 1,
                                    fragment: "a",
                                    extra: (),
                                },
                            },
                            Ast {
                                node: BinaryOp(
                                    Sub,
                                    Ast {
                                        node: Ident(
                                            Ident(
                                                "b",
                                            ),
                                        ),
                                        span: LocatedSpan {
                                            offset: 11,
                                            line: 1,
                                            fragment: "b",
                                            extra: (),
                                        },
                                    },
                                    Ast {
                                        node: Ident(
                                            Ident(
                                                "c",
                                            ),
                                        ),
                                        span: LocatedSpan {
                                            offset: 15,
                                            line: 1,
                                            fragment: "c",
                                            extra: (),
                                        },
                                    },
                                ),
                                span: LocatedSpan {
                                    offset: 11,
                                    line: 1,
                                    fragment: "b - c",
                                    extra: (),
                                },
                            },
                        ),
                        span: LocatedSpan {
                            offset: 7,
                            line: 1,
                            fragment: "a + b - c",
                            extra: (),
                        },
                    },
                ),
            ),
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "return a + b - c",
                extra: (),
            },
        },
    ),
)
