src/snapshots/vm__parser__test__parse_while-3.snap
---
source: src/parser.rs
expression: "while_statement(\"while () { 123; }\".into())"
---
Err(
    Failure(
        VerboseError {
            errors: [
                (
                    LocatedSpan {
                        offset: 7,
                        line: 1,
                        fragment: ") { 123; }",
                        extra: (),
                    },
                    Nom(
                        Fail,
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 7,
                        line: 1,
                        fragment: ") { 123; }",
                        extra: (),
                    },
                    Nom(
                        Alt,
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 5,
                        line: 1,
                        fragment: " () { 123; }",
                        extra: (),
                    },
                    Context(
                        "While predicate",
                    ),
                ),
                (
                    LocatedSpan {
                        offset: 0,
                        line: 1,
                        fragment: "while () { 123; }",
                        extra: (),
                    },
                    Context(
                        "While loop",
                    ),
                ),
            ],
        },
    ),
)
